plugins {
    id "io.freefair.lombok" version "3.8.1"
    id 'java'
}

group 'br.com.battlebits'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

apply plugin: 'java'

dependencies {
    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
    compile 'org.mongodb:mongodb-driver-sync:3.10.1'
    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
    compile 'com.google.code.gson:gson:2.8.5'
    compile 'com.google.guava:guava:28.0-jre'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

sourceSets {
    main.java.srcDir "src/main/java"
    main.resources.srcDir "src/main/resources"
    main.java.srcDir "src/test/java"
    main.resources.srcDir "src/test/resources"
}